modified:   DockerFile 	modified:   dags/__pycache__/rotina_principal.cpython-312.pyc 	new file:   dags/teste.py 	new file:   "logs/dag_id=execute_databricks_workflow/run_id=manual__2024-07-21T21\357\200\27237\357\200\27246.596317+00\357\200\27200/task_id=fetch_and_upload_brewery_data/attempt=1.log" 	new file:   "logs/dag_id=execute_databricks_workflow/run_id=manual__2024-07-21T21\357\200\27237\357\200\27246.596317+00\357\200\27200/task_id=run_databricks_workflow/attempt=1.log" 	modified:   logs/dag_processor_manager/dag_processor_manager.log 	modified:   logs/scheduler/2024-07-21/rotina_principal.py.log

--- a/DockerFile
+++ b/DockerFile
@@ -10,5 +10,9 @@ COPY dags /usr/local/airflow/dags
 # Copy your plugins folder into the container (if you have plugins)
 COPY plugins /usr/local/airflow/plugins
 
+# Create the landing_zone directory and set permissions
+RUN mkdir -p /usr/local/airflow/landing_zone && \
+    chown -R airflow:airflow /usr/local/airflow/landing_zone
+
 # Set the working directory
 WORKDIR /usr/local/airflow
